updated: TypeChecker to check the return type of the function compared to the return value or statement of the function